--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "ejs": "~2.4.1",
     "eslint": "^3.2.2",
     "express": "~4.13.4",
+    "mongodb": "^2.2.5",
     "morgan": "~1.7.0",
     "strava-v3": "^1.12.1"
   },
